# KaraokePlayer

./: .gitignore  CMakeLists.txt  README.md  release_build.py
assets/: font.xml  song.xml
shaders/: background.frag  background.vert  character.frag  character.vert  karaoke.frag  karaoke.vert  letter.frag  letter.vert  loading_bar.frag  loading_bar.vert  pause_loading_bar.frag  pause_loading_bar.vert  plus_minus_button.frag  plus_minus_button.vert  progress_bar.frag  progress_bar.vert
src/: Application.cpp  Application.hpp  Audio.cpp  Audio.hpp  BackgroundRenderer.cpp  BackgroundRenderer.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  Letter.cpp  Letter.hpp  Mat4.cpp  Mat4.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  Song.cpp  Song.hpp  Vec2.cpp  Vec2.hpp  main.cpp
src/graphics/: Character.cpp  Character.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  PlusMinusButton.cpp  PlusMinusButton.hpp  Text.cpp  Text.hpp
src/karaoke/: Karaoke.cpp  Karaoke.hpp  Letter.cpp  Letter.hpp  Line.cpp  Line.hpp  Page.cpp  Page.hpp  Song.cpp  Song.hpp  Syllabe.cpp  Syllabe.hpp  Word.cpp  Word.hpp
src/math/: Mat4.cpp  Mat4.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp  utils.cpp  utils.hpp
src/rendering/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  PageRenderer.cpp  PageRenderer.hpp  PauseLoadingBarRenderer.cpp  PauseLoadingBarRenderer.hpp  PlusMinusButtonsRenderer.cpp  PlusMinusButtonsRenderer.hpp  ProgressBarRenderer.cpp  ProgressBarRenderer.hpp  Renderer.cpp  Renderer.hpp  TextsRenderer.cpp  TextsRenderer.hpp
src/stb/: vorbis.cpp
